update thanh lý tb